I updated my previous cv with a contact form

--- a/MOYIB CV UPDATED.html
+++ b/MOYIB CV UPDATED.html
@@ -116,6 +116,39 @@
         <p class="headings"><strong>LANGUAGES</strong></p>
         <p>English, Yoruba.</p>
       </div>
+      <hr><br>
+         <!-- CONTACT FORM -->
+
+         <div class="container">
+
+           <form action="index.html" method="post">
+             <fieldset>
+               <legend>Contact Me</legend>
+             <section>
+             <label for="name">Your Name:<sup>*</sup></label>
+             <input id="name" type="text" name="name" placeholder="First Name and Last Name" minlength="4">
+             </section>
+
+             <section>
+               <label for="email" required>Your Email:<sup>*</sup></label>
+               <input id="email" type="text" name="email" placeholder="e.g. example@example.com">
+             </section>
+
+             <section>
+               <label for="title">Email Title:<sup>*</sup></label>
+               <input type="text" id="title" name="title" placeholder="Subject of the email">
+             </section>
+
+             <section>
+             <label for="message" class="message">Message: <textarea id="message" name="message" placeholder="Write something here" minlength="20"></textarea></label>
+             </section>
+
+             <section class="submit">
+               <input type="submit" value="Submit">
+             </section>
+             </fieldset>
+           </form>
+
 
     </article>
 
